--- a/sections/acknowledgements.tex
+++ b/sections/acknowledgements.tex
@@ -1,1 +1,12 @@
-text of acknowledgement
+First and foremost, I would like to express my deepest appreciation to my advisor, Nick Nikiforakis. 
+I learned a lot from his work ethics and wisdom, and benefited from his support through all these years. 
+I would also like to express my gratitude to R Sekar, Michalis Polychronakis, Manuel Egele, and Adam Doupé for serving on my dissertation committee and providing me with helpful feedback. 
+ 
+During my Ph.D journey, I was honored to work with great researchers whom I learned a lot from. Above all, I am sincerely grateful to Pierre Laperdrix for his professional attitude, his humor, and his endless support and motivation. 
+I enjoyed every moment of working with my colleagues and collaborators, Rasoul Jahanshahi, Chris Tsoukaladelis, Oleksii Starov, Najmeh Miramirkhani, Xigao Li, Brian Kondracki, Tim Barron, Meng Luo, Johnny So, Billy Tsouvalas, and Mohammad Muzammil. 
+
+None of this would have been possible without the love and encouragement of my family, Zohre, Masoud, Mamani, Shahnaz, and Behnam. 
+Special thanks to Hooman the cat, for being of no help at all. 
+Thanks should also go to my friends who were there for me, Mina, Javad, Reza, and the Iranian community. 
+I owe my professional career in cybersecurity to Mohammad Jorjandi, my mentor, who always had my personal growth in mind and set me on this path, 7,000 miles away from home. 
+Lastly, thanks to Alyssa, for her unconditional love and support. 
