--- a/sections/ad/6_relatedwork.tex
+++ b/sections/ad/6_relatedwork.tex
@@ -27,7 +27,7 @@ While PHP malware uses specific APIs to remain hidden and perform its malicious 
 To be able to perform an end-to-end analysis of these applications, we extended MalMax by adding support for symbolic execution, and implementing the features used in popular PHP applications. 
 
 \paragraph{Software debloating} 
-Researchers have approached the idea of debloating from various aspects ranging from the kernel~\cite{abubakar2021shard}, container environments~\cite{rastogi2017cimplifier, 259711} to binaries~\cite{hasan2022decap, redini2019b, heo2018effective, ghavamnia2020temporal, mishra2020saffire, koo2019configuration, quach2018debloating}, web browsers~\cite{snyder2017most, qian2020slimium}, and web applications~\cite{azad2019less, bulekov2021saphire, mininode, jahanshahi2020you}.
+Researchers have approached the idea of debloating from various aspects ranging from the kernel~\cite{abubakar2021shard}, container environments~\cite{rastogi2017cimplifier, 259711} to binaries~\cite{hasan2022decap, redini2019b, heo2018effective, ghavamnia2020temporal, mishra2020saffire, koo2019configuration, quach2018debloating}, web browsers~\cite{snyder2017vibrate, qian2020slimium}, and web applications~\cite{azad2019less, bulekov2021saphire, mininode, jahanshahi2020you}.
 
 In this paper, we use the ``Less is More'' framework of Amin Azad et al.~\cite{azad2019less} to generate a baseline code-coverage to assess the results of \animatedead{} and generate our entry points based on the Selenium tests developed as part of LIM. 
 While the goal of \animatedead{} debloating is not to outperform LIM, we demonstrate that despite the generalizations made by concolic execution, our debloating statistics and security improvements are on par with the dynamic debloating of LIM. 
