--- a/thesis.tex
+++ b/thesis.tex
@@ -93,17 +93,21 @@
 \maketitle %
 \makeapproval %
 
-\section*{Abstract}
+\begin{abstract}
 \input{sections/abstract}
-% \end{abstract}
+\end{abstract}
+
+\pagebreak
+\input{sections/dedication}
+
 \tableofcontents %
 \listoffigures %
 %
 \listoftables %
 %
-% \begin{acknowledgements}
-%     \input{sections/acknowledgements}
-% \end{acknowledgements}
+\begin{acknowledgements}
+    \input{sections/acknowledgements}
+\end{acknowledgements}
 \pagestyle{thesis}
 \newpage
 \pagenumbering{arabic}
