Making formatting modifcations requested by SBU

--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,7 @@
 %\outmember{Name of Outside Member}{Position}{Institution}%
 \outmember{Manuel Egele}{Associate Professor, Department of Electrical and Computer Engineering}{Boston University}%
 \sndoutmember{Adam Doupé}{Associate Professor, School of Computing and Augmented Intelligence}{Arizona State University}%
-\dean{Eric Wertheimer}%
+\dean{Celia Marshik}%
 
 \widowpenalty10000
 \clubpenalty10000
@@ -98,7 +98,9 @@
 \end{abstract}
 
 \pagebreak
-\input{sections/dedication}
+\begin{dedication}
+  \input{sections/dedication}
+\end{dedication}
 
 \tableofcontents %
 \listoffigures %
